examples/test/testpolicy8436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8436
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key37: value30
      key16: value3
      key3: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value45
          key40: value9
          key28: value5
      podSelector:
        matchLabels:
          key14: value34
          key17: value16
          key4: value5
